Organización por carpetas

--- a/unidad1/ud11.md
+++ b/unidad1/ud11.md
@@ -1,4 +1,7 @@
-# Introducció al Disseny d'Algorismes
+---
+layout: default
+title: UD1.1 Introducció al disseny d'algorismes
+---
 
 ## 1\. Què és la Programació?
 
@@ -9,6 +12,8 @@ La programació és una disciplina fonamental en el món de la informàtica. Es 
 L’objectiu principal de la programació és automatitzar tasques que serien difícils, costoses o impossibles de fer manualment. Alguns exemples són la resolució d’equacions matemàtiques complexes, el processament de grans volums de dades o la simulació de fenòmens físics.
 
 **Exemple:** Suposem que volem calcular el salari total dels empleats d'una empresa. Podríem fer-ho manualment sumant les hores treballades per cada empleat, però si tenim centenars de treballadors, la tasca esdevé massa laboriosa. Un programa pot automatitzar aquest procés, llegint les dades des d'un fitxer i fent els càlculs necessaris en qüestió de segons.
+
+*Il·lustració suggerida*: Un diagrama que mostri el procés manual vs. l’automatitzat amb un programa.
 
 ### 1.2. Diferència entre Programació i altres disciplines
 
@@ -28,6 +33,8 @@ Formalment, un algorisme és un conjunt d'instruccions o passos que descriuen co
 2. Dividir la suma pel nombre de números (en aquest cas, 3).
 3. El resultat és la mitjana.
 
+*Il·lustració suggerida*: Un diagrama de flux simple que mostri els passos de l’algorisme per calcular la mitjana.
+
 ### 2.2. Característiques dels Algorismes
 
 Perquè un algorisme sigui útil i efectiu, ha de complir amb certes característiques:
@@ -44,6 +51,8 @@ Perquè un algorisme sigui útil i efectiu, ha de complir amb certes caracterís
 3. Escalfar l’aigua fins que bulli.
 4. Deixar l'ou bullir durant 10 minuts.
 5. Retirar l'ou de l'aigua i deixar-lo refredar.
+
+*Il·lustració suggerida*: Un diagrama visual que mostri el procés de cuinar un ou dur.
 
 ### 2.3. Tipus d’Algorismes
 
@@ -74,25 +83,27 @@ Un programa típic conté les següents parts:
 * **Instruccions:** Ordres que l’ordinador ha de seguir per processar les dades i obtenir resultats.
 * **Funcions:** Blocs de codi que realitzen tasques específiques i que poden ser reutilitzats.
 
-**Exemple:** Un programa senzill en Python que suma dos nombres seria:
+**Exemple:** Un programa senzill en Java que suma dos nombres seria:
 
-```python
-# Definició de les variables
-nombre1 = 5
-nombre2 = 10
+```java
+// Definició de les variables
+int nombre1 = 5;
+int nombre2 = 10;
 
-# Suma de les variables
-resultat = nombre1 + nombre2
+// Suma de les variables
+int resultat = nombre1 + nombre2;
 
-# Mostrar el resultat
-print("La suma és:", resultat)
+// Mostrar el resultat
+System.out.println("La suma és: " + resultat);
 ```
+
+*Il·lustració suggerida*: Una captura de pantalla o un diagrama que mostri el codi Java en un entorn de desenvolupament com Eclipse o IntelliJ IDEA.
 
 ### 3.2. De l’Algorisme al Programa
 
 Per crear un programa, primer cal dissenyar un algorisme. Aquest algorisme es tradueix a un llenguatge de programació que l’ordinador pot entendre i executar. Aquesta traducció es coneix com a "codificació" o "implementació".
 
-**Exemple:** Si tenim l'algorisme per calcular la mitjana de tres números, podem implementar-lo en diversos llenguatges de programació com Python, Java, o C++.
+**Exemple:** Si tenim l'algorisme per calcular la mitjana de tres números, podem implementar-lo en diversos llenguatges de programació com Java, Python, o C++.
 
 ## 4\. Llenguatges de Programació
 
@@ -108,7 +119,9 @@ Aquests llenguatges són molt propers al llenguatge màquina, el que significa q
 
 Aquests llenguatges estan dissenyats per ser més comprensibles per als humans. Ofereixen una major abstracció, el que facilita el procés de programació, però a costa d’una mica d’eficiència en comparació amb els llenguatges de baix nivell.
 
-**Exemple:** Python és un llenguatge d'alt nivell que s’utilitza àmpliament per a aplicacions web, anàlisi de dades i intel·ligència artificial.
+**Exemple:** Java és un llenguatge d'alt nivell que s’utilitza àmpliament per al desenvolupament d'aplicacions empresarials, aplicacions mòbils i sistemes integrats.
+
+*Il·lustració suggerida*: Una comparació visual entre codi en assemblador i codi Java per a una operació simple.
 
 ### 4.3. Llenguatges de programació especialitzats
 
@@ -126,6 +139,8 @@ El primer pas és entendre bé el problema que es vol resoldre. Això pot implic
 
 Un cop entès el problema, es procedeix a dissenyar l’algorisme. Aquest pas inclou la descripció detallada dels passos necessaris per arribar a la solució, que pot ser representada amb diagrames de flux, pseudocodi, o fins i tot descripcions textuals.
 
+*Il·lustració suggerida*: Un diagrama de flux que representi el procés de resolució d’un problema, des de la comprensió fins a la codificació.
+
 ### 5.3. Codificació
 
 Després de dissenyar l’algorisme, es tradueix a un llenguatge de programació. Aquesta és la fase on es crea el codi font del programa.
@@ -133,6 +148,8 @@ Després de dissenyar l’algorisme, es tradueix a un llenguatge de programació
 ### 5.4. Prova i Depuració
 
 Un cop codificat, el programa es prova per assegurar-se que funciona correctament. Això inclou executar el programa amb diferents dades d'entrada per veure si produeix els resultats esperats. Si es troben errors (bugs), es procedeix a la seva depuració.
+
+*Il·lustració suggerida*: Una representació visual del cicle de prova i depuració amb un exemple de codi en Java.
 
 ### 5.5. Documentació i Manteniment
 
@@ -156,6 +173,8 @@ Imagina un algorisme que calcula si un número és parell o senar. El diagrama d
 4. Si el residu és 0, el número és parell
 5. Si el residu no és 0, el número és senar
 6. Final
+
+*Il·lustració suggerida*: Un diagrama de flux amb símbols que mostri aquest procés per determinar si un número és parell o senar.
 
 ### 6.2. Pseudocodi
 
@@ -191,9 +210,9 @@ Final
 **Diagrama de flux:**
 
 1. Inici
-2. \[Definir costat <- 4\]
-3. \[Calcular àrea <- costat \* costat\]
-4. \[Mostrar àrea\]
+2. <math><semantics><mrow><mi>D</mi><mi>e</mi><mi>f</mi><mi>i</mi><mi>n</mi><mi>i</mi><mi>r</mi><mi>c</mi><mi>o</mi><mi>s</mi><mi>t</mi><mi>a</mi><mi>t</mi><mo><</mo><mo>−</mo><mn>4</mn></mrow><annotation>Definir costat <- 4</annotation></semantics></math>Definircostat<−4
+3. <math><semantics><mrow><mi>C</mi><mi>a</mi><mi>l</mi><mi>c</mi><mi>u</mi><mi>l</mi><mi>a</mi><mi>r</mi><mover><mi>a</mi><mo>ˋ</mo></mover><mi>r</mi><mi>e</mi><mi>a</mi><mo><</mo><mo>−</mo><mi>c</mi><mi>o</mi><mi>s</mi><mi>t</mi><mi>a</mi><mi>t</mi><mstyle><mtext>\\\*</mtext></mstyle><mi>c</mi><mi>o</mi><mi>s</mi><mi>t</mi><mi>a</mi><mi>t</mi></mrow><annotation>Calcular àrea <- costat \\\* costat</annotation></semantics></math>Calcularaˋrea<−costat\\\*costat
+4. <math><semantics><mrow><mi>M</mi><mi>o</mi><mi>s</mi><mi>t</mi><mi>r</mi><mi>a</mi><mi>r</mi><mover><mi>a</mi><mo>ˋ</mo></mover><mi>r</mi><mi>e</mi><mi>a</mi></mrow><annotation>Mostrar àrea</annotation></semantics></math>Mostraraˋrea
 5. Final
 
 **Pseudocodi:**
@@ -205,6 +224,8 @@ costat <- 4
 Mostrar àrea
 Final
 ```
+
+*Il·lustració suggerida*: Un diagrama de flux que representi l’algorisme per calcular l’àrea d’un quadrat.
 
 ### 7.2. Exemple 2: Lectura i visualització de dades d’un usuari
 
@@ -222,10 +243,10 @@ Final
 **Diagrama de flux:**
 
 1. Inici
-2. \[Llegir nom\]
-3. \[Llegir cognoms\]
-4. \[Concatenar nom i cognoms\]
-5. \[Mostrar nom complet\]
+2. <math><semantics><mrow><mi>L</mi><mi>l</mi><mi>e</mi><mi>g</mi><mi>i</mi><mi>r</mi><mi>n</mi><mi>o</mi><mi>m</mi></mrow><annotation>Llegir nom</annotation></semantics></math>Llegirnom
+3. <math><semantics><mrow><mi>L</mi><mi>l</mi><mi>e</mi><mi>g</mi><mi>i</mi><mi>r</mi><mi>c</mi><mi>o</mi><mi>g</mi><mi>n</mi><mi>o</mi><mi>m</mi><mi>s</mi></mrow><annotation>Llegir cognoms</annotation></semantics></math>Llegircognoms
+4. <math><semantics><mrow><mi>C</mi><mi>o</mi><mi>n</mi><mi>c</mi><mi>a</mi><mi>t</mi><mi>e</mi><mi>n</mi><mi>a</mi><mi>r</mi><mi>n</mi><mi>o</mi><mi>m</mi><mi>i</mi><mi>c</mi><mi>o</mi><mi>g</mi><mi>n</mi><mi>o</mi><mi>m</mi><mi>s</mi></mrow><annotation>Concatenar nom i cognoms</annotation></semantics></math>Concatenarnomicognoms
+5. <math><semantics><mrow><mi>M</mi><mi>o</mi><mi>s</mi><mi>t</mi><mi>r</mi><mi>a</mi><mi>r</mi><mi>n</mi><mi>o</mi><mi>m</mi><mi>c</mi><mi>o</mi><mi>m</mi><mi>p</mi><mi>l</mi><mi>e</mi><mi>t</mi></mrow><annotation>Mostrar nom complet</annotation></semantics></math>Mostrarnomcomplet
 6. Final
 
 **Pseudocodi:**
@@ -234,13 +255,13 @@ Final
 Inici
 Llegir nom
 Llegir cognoms
-nom_complet <- nom , cognoms
+nom_complet <- nom + " " + cognoms
 Mostrar nom_complet
 Final
 ```
 
+*Il·lustració suggerida*: Un diagrama de flux per l’algorisme de lectura i visualització de dades d’un usuari.
+
 ## 8\. Conclusió
 
 La programació és una habilitat clau en el món actual, i el disseny d’algorismes és la base sobre la qual es construeix qualsevol programa. Dominar la creació d’algorismes i la seva traducció a codi executable és essencial per a qualsevol persona interessada en la informàtica o l’enginyeria de software. Amb aquesta introducció, els alumnes han de sentir-se preparats per explorar més a fons aquests conceptes i començar a aplicar-los en la resolució de problemes reals.
-
-
