Añadida ilustración ud1.1_1

--- a/unidad1/ud11.md
+++ b/unidad1/ud11.md
@@ -13,7 +13,7 @@ L’objectiu principal de la programació és automatitzar tasques que serien di
 
 **Exemple:** Suposem que volem calcular el salari total dels empleats d'una empresa. Podríem fer-ho manualment sumant les hores treballades per cada empleat, però si tenim centenars de treballadors, la tasca esdevé massa laboriosa. Un programa pot automatitzar aquest procés, llegint les dades des d'un fitxer i fent els càlculs necessaris en qüestió de segons.
 
-![procés manual vs. l’automatitzat amb un programa](images/ud11.jpeg)
+![procés manual vs. l’automatitzat amb un programa](images/ud11_1.jpeg)
 
 *Il·lustració suggerida*: Un diagrama que mostri el procés manual vs. l’automatitzat amb un programa.
 
