Prueba de alineación de ilustraciones

--- a/unidad1/ud11.md
+++ b/unidad1/ud11.md
@@ -11,11 +11,10 @@ La programació és una disciplina fonamental en el món de la informàtica. Es 
 
 L’objectiu principal de la programació és automatitzar tasques que serien difícils, costoses o impossibles de fer manualment. Alguns exemples són la resolució d’equacions matemàtiques complexes, el processament de grans volums de dades o la simulació de fenòmens físics.
 
-**Exemple:** Suposem que volem calcular el salari total dels empleats d'una empresa. Podríem fer-ho manualment sumant les hores treballades per cada empleat, però si tenim centenars de treballadors, la tasca esdevé massa laboriosa. Un programa pot automatitzar aquest procés, llegint les dades des d'un fitxer i fent els càlculs necessaris en qüestió de segons.
+|||
+|-|-|
+| ![procés manual vs. l’automatitzat amb un programa](images/ud11_1.jpeg) | **Exemple:** Suposem que volem calcular el salari total dels empleats d'una empresa. Podríem fer-ho manualment sumant les hores treballades per cada empleat, però si tenim centenars de treballadors, la tasca esdevé massa laboriosa. Un programa pot automatitzar aquest procés, llegint les dades des d'un fitxer i fent els càlculs necessaris en qüestió de segons. |
 
-![procés manual vs. l’automatitzat amb un programa](images/ud11_1.jpeg)
-
-*Il·lustració suggerida*: Un diagrama que mostri el procés manual vs. l’automatitzat amb un programa.
 
 ### 1.2. Diferència entre Programació i altres disciplines
 
