--- a/unidad1/ud11.md
+++ b/unidad1/ud11.md
@@ -34,7 +34,7 @@ Formalment, un algorisme és un conjunt d'instruccions o passos que descriuen co
 2. Dividir la suma pel nombre de números (en aquest cas, 3).
 3. El resultat és la mitjana.
 
-*Il·lustració suggerida*: Un diagrama de flux simple que mostri els passos de l’algorisme per calcular la mitjana.
+![ passos de l’algorisme per calcular la mitjana](images/ud11_2.png)
 
 ### 2.2. Característiques dels Algorismes
 
