--- a/unidad1/ud11.md
+++ b/unidad1/ud11.md
@@ -53,7 +53,8 @@ Perquè un algorisme sigui útil i efectiu, ha de complir amb certes caracterís
 4. Deixar l'ou bullir durant 10 minuts.
 5. Retirar l'ou de l'aigua i deixar-lo refredar.
 
-*Il·lustració suggerida*: Un diagrama visual que mostri el procés de cuinar un ou dur.
+![procés de cuinar un ou dur](images/ud11_3.svg)
+
 
 ### 2.3. Tipus d’Algorismes
 
