--- a/unidad1/ud11.md
+++ b/unidad1/ud11.md
@@ -47,15 +47,18 @@ Perquè un algorisme sigui útil i efectiu, ha de complir amb certes caracterís
 
 **Exemple de vida quotidiana:** Algorisme per cuinar un ou dur:
 
-1. Omplir una olla amb aigua.
+|                                                  ||
+|--------------------------------------------------|-|
+| ![procés de cuinar un ou dur](images/ud11_3.svg) | 1. Omplir una olla amb aigua.
 2. Col·locar l'ou a l'olla.
 3. Escalfar l’aigua fins que bulli.
 4. Deixar l'ou bullir durant 10 minuts.
 5. Retirar l'ou de l'aigua i deixar-lo refredar.
+   |
 
-![procés de cuinar un ou dur](images/ud11_3.svg){width=100%}
 
 
+    
 ### 2.3. Tipus d’Algorismes
 
 Hi ha molts tipus d'algorismes, però els podem agrupar en categories generals segons el tipus de problema que resolen o la manera com ho fan:
