--- a/unidad1/ud11.md
+++ b/unidad1/ud11.md
@@ -47,14 +47,13 @@ Perquè un algorisme sigui útil i efectiu, ha de complir amb certes caracterís
 
 **Exemple de vida quotidiana:** Algorisme per cuinar un ou dur:
 
-|                                                  ||
-|--------------------------------------------------|-|
-| ![procés de cuinar un ou dur](images/ud11_3.svg) | 1. Omplir una olla amb aigua.
-2. Col·locar l'ou a l'olla.
-3. Escalfar l’aigua fins que bulli.
-4. Deixar l'ou bullir durant 10 minuts.
-5. Retirar l'ou de l'aigua i deixar-lo refredar.
-   |
+|                                                  |                                                                                                                                                                                         |
+|--------------------------------------------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+|  | 1. Omplir una olla amb aigua. 2. Col·locar l'ou a l'olla. 3. Escalfar l’aigua fins que bulli. 4. Deixar l'ou bullir durant 10 minuts. 5. Retirar l'ou de l'aigua i deixar-lo refredar.  |
+|  | 2. Col·locar l'ou a l'olla. 3. Escalfar l’aigua fins que bulli. 4. Deixar l'ou bullir durant 10 minuts. 5. Retirar l'ou de l'aigua i deixar-lo refredar.  |
+| ![procés de cuinar un ou dur](images/ud11_3.svg) | 3. Escalfar l’aigua fins que bulli. 4. Deixar l'ou bullir durant 10 minuts. 5. Retirar l'ou de l'aigua i deixar-lo refredar.  |
+|  | 4. Deixar l'ou bullir durant 10 minuts. 5. Retirar l'ou de l'aigua i deixar-lo refredar.  |
+|  | 5. Retirar l'ou de l'aigua i deixar-lo refredar.  |
 
 
 
