--- a/unidad1/ud11.md
+++ b/unidad1/ud11.md
@@ -47,15 +47,18 @@ Perquè un algorisme sigui útil i efectiu, ha de complir amb certes caracterís
 
 **Exemple de vida quotidiana:** Algorisme per cuinar un ou dur:
 
-<img src="images/ud11_3.svg" alt="Descripción de la imagen" style="float:right; width: 50%; height: 20%;">
+
 
 **Procés de cuinar un ou dur**                                                                                                                                                             
 
-1. Omplir una olla amb aigua.
-2. Col·locar l'ou a l'olla.
-3. Escalfar l’aigua fins que bulli.
-4. Deixar l'ou bullir durant 10 minuts.
-5. Retirar l'ou de l'aigua i deixar-lo refredar.
+```mermaid
+flowchart TD
+    A[Omplir una olla amb aigua] --> B[Col·locar l'ou a l'olla]
+    B --> C[Escalfar l’aigua fins que bulli]
+    C --> D[Deixar l'ou bullir durant 10 minuts]
+    D --> E[Retirar l'ou de l'aigua i deixar-lo refredar]
+``` 
+
     
 ### 2.3. Tipus d’Algorismes
 
