--- a/unidad1/ud11.md
+++ b/unidad1/ud11.md
@@ -2,6 +2,10 @@
 layout: default
 title: UD1.1 Introducció al disseny d'algorismes
 ---
+<script type="module">
+  import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs';
+  mermaid.initialize({ startOnLoad: true });
+</script>
 
 ## 1\. Què és la Programació?
 
