--- a/unidad1/ud11.md
+++ b/unidad1/ud11.md
@@ -2,11 +2,6 @@
 layout: default
 title: UD1.1 Introducció al disseny d'algorismes
 ---
-<script type="module">
-  import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs';
-  mermaid.initialize({ startOnLoad: true });
-</script>
-
 ## 1\. Què és la Programació?
 
 La programació és una disciplina fonamental en el món de la informàtica. Es tracta del procés de creació de programes, que són conjunts d’instruccions dissenyades per ser executades per un ordinador per tal de realitzar una tasca específica. En essència, programar significa escriure codis que indiquen a l’ordinador què ha de fer, pas a pas, per resoldre un problema.
@@ -51,19 +46,8 @@ Perquè un algorisme sigui útil i efectiu, ha de complir amb certes caracterís
 
 **Exemple de vida quotidiana:** Algorisme per cuinar un ou dur:
 
+![Procés de cuinar un ou dur](images/ud11_3.png)
 
-
-**Procés de cuinar un ou dur**                                                                                                                                                             
-
-```mermaid
-flowchart TD
-    A[Omplir una olla amb aigua] --> B[Col·locar l'ou a l'olla]
-    B --> C[Escalfar l’aigua fins que bulli]
-    C --> D[Deixar l'ou bullir durant 10 minuts]
-    D --> E[Retirar l'ou de l'aigua i deixar-lo refredar]
-``` 
-
-    
 ### 2.3. Tipus d’Algorismes
 
 Hi ha molts tipus d'algorismes, però els podem agrupar en categories generals segons el tipus de problema que resolen o la manera com ho fan:
