--- a/unidad1/ud11.md
+++ b/unidad1/ud11.md
@@ -90,9 +90,6 @@ int resultat = nombre1 + nombre2;
 // Mostrar el resultat
 System.out.println("La suma és: " + resultat);
 ```
-
-*Il·lustració suggerida*: Una captura de pantalla o un diagrama que mostri el codi Java en un entorn de desenvolupament com Eclipse o IntelliJ IDEA.
-
 ### 3.2. De l’Algorisme al Programa
 
 Per crear un programa, primer cal dissenyar un algorisme. Aquest algorisme es tradueix a un llenguatge de programació que l’ordinador pot entendre i executar. Aquesta traducció es coneix com a "codificació" o "implementació".
@@ -115,7 +112,10 @@ Aquests llenguatges estan dissenyats per ser més comprensibles per als humans. 
 
 **Exemple:** Java és un llenguatge d'alt nivell que s’utilitza àmpliament per al desenvolupament d'aplicacions empresarials, aplicacions mòbils i sistemes integrats.
 
-*Il·lustració suggerida*: Una comparació visual entre codi en assemblador i codi Java per a una operació simple.
+| Baix nivelll                       | Alt nivell                  |
+|------------------------------------|-----------------------------|
+| ![ensamblador](images/ud11_41.PNG) | ![java](images/ud11_42.PNG) |
+
 
 ### 4.3. Llenguatges de programació especialitzats
 
